# ISY-Client

./: .gitignore  CMakeLists.txt  main.cpp
include/: client.hpp  clientmodel.hpp
qml/: EventButton.qml  FileControl.qml  List.qml  MainScreen.qml  TouchScreen.qml  main.qml
src/: client.cpp  clientmodel.cpp
